TAG: qcreports_db-3-5-1-25
TAG: qcreports_db-3-5-1-24
DATE: 11/15/2006
STAFF: lec
CHANGES:
1) TR8001: TIGR to DFCI
2) mgiconfig FTP 

TAG: qcreports_db-3-5-1-23
DATE: 11/14/2006
STAFF: lec
CHANGES:
1) TR8001: TIGR to DFCI

TAG: qcreports_db-3-5-1-22
DATE: 11/09/2006
STAFF: lec
CHANGES:
1) change param list for msp/runQC.csh, seqload/runQC.csh

TAG: qcreports_db-3-5-1-21
DATE: 11/07/2006
STAFF: lec
CHANGES:
1) TR8015/VOC_GOObsolete.py

TAG: qcreports_db-3-5-1-20
TAG: qcreports_db-3-5-1-19
DATE: 11/06/2006
STAFF: lec
CHANGES:
1) TR8007/MLD_Triage.sql

TAG: qcreports_db-3-5-1-18
DATE: 11/01/2006
STAFF: lec
CHANGES:
1) fix triage reports

TAG: qcreports_db-3-5-1-17
DATE: 10/24/2006
STAFF: lec
CHANGES:
1) GO Tracking; GO_done.py

TAG: qcreports_db-3-5-1-16
TAG: qcreports_db-3-5-1-15
DATE: 10/17/2006
STAFF: lec
CHANGES:
1) TR7971/MTB_Triage.py
2) TR7976/GO_done.py

TAG: qcreports_db-3-5-1-14
TAG: qcreports_db-3-5-1-13
DATE: 10/13/2006
STAFF: lec
CHANGES:
1) TR7966/NOM_Triage.sql
2) TR7958/GXD_Triage.sql

TAG: qcreports_db-3-5-1-12
TAG: qcreports_db-3-5-1-11
DATE: 10/10/2006
STAFF: lec
CHANGES:
1) TR7943; remove trailer

TAG: qcreports_db-3-5-1-10
DATE: 10/05/2006
STAFF: lec
CHANGES:
1) TR7943; remove trailer

TAG: qcreports_db-3-5-1-9
TAG: qcreports_db-3-5-1-8
DATE: 10/04/2006
STAFF: lec
CHANGES:
1) TR 7865/MRK_GOUnknown.sql
2) convert to MRK_Homology_Cache

TAG: qcreports_db-3-5-1-7
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR 7935/updated ALL_MolNotesNoMP.py

TAG: qcreports_db-3-5-1-6
DATE: 09/28/2006
STAFF: lec
CHANGES:
1) TR 7925/updated GXD_Images.py

TAG: qcreports_db-3-5-1-5
TAG: qcreports_db-3-5-1-4
DATE: 09/22/2006
STAFF: lec
CHANGES:
1) TR 7901/ALL_MolNotesNoMP
2) TR 7335/PIRSF_Stats.sql

TAG: qcreports_db-3-5-1-3
DATE: 09/07/2006
STAFF: lec
CHANGES:
1) updated msp/loadQC_* RADAR_DBSCHEMA to RADAR_DBSCHEMADIR

TAG: qcreports_db-3-5-1-2
DATE: 09/07/2006
STAFF: lec
CHANGES:
1) TR 7887; GXD_FullCodeable.py

TAG: qcreports_db-3-5-1-1
DATE: 09/06/2006
STAFF: lec