@@ -270,7 +270,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 
 <A NAME="dataloads"><B>Data Loads</B></A>
 <OL>
-<LI><A HREF="/data/loads/entrezgene/egload/index.html">EntrezGene Load Mouse: Data and QC Reports</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/egload/index.html">EntrezGene Load Mouse: Data and QC Reports</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/entrezgeneload/index.html">EntrezGene Load Human/Rat/Chimp/Dog: Data and QC Reports</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/swissload">SwissProt Load Data and Logs</A>
 <LI>UniGene</LI>
@@ -284,16 +284,16 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MPindex.html">Mammalian Phenotype Vocabulary/DAG Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MAindex.html">Adult Mouse Anatomy Vocabulary/DAG Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/OMIMindex.html">OMIM Vocabulary Load</A>
-<LI><A HREF="/data/loads/mgc/mgcload/index.html">MGC Association Load</A>
-<LI><A HREF="/data/loads/rpci/rpciload/index.html">RPCI Clone Load</A>
-<LI><A HREF="/data/loads/genbank/gbcdnaload/index.html">GenBank EST cDNA Clone Load</A>
-<LI><A HREF="/data/loads/genbank/gbseqload/index.html">GenBank Sequence Load</A>
-<LI><A HREF="/data/loads/genbank/refseqload/index.html">RefSeq Sequence Load</A>
-<LI><A HREF="/data/loads/swissprot/spseqload/index.html">SwissProt/TrEMBL Sequence Load</A>
-<LI><A HREF="/data/loads/dfci/dfciseqload/index.html">DFCI Sequence Load</A>
-<LI><A HREF="/data/loads/dots/dotsseqload/index.html">DoTS Sequence Load</A>
-<LI><A HREF="/data/loads/nia/niaseqload/index.html">NIA Sequence Load</A>
-<LI><A HREF="/data/loads/pirsf/pirsfload/index.html">PIRSF Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/mgcload/index.html">MGC Association Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/rpciload/index.html">RPCI Clone Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/gbcdnaload/index.html">GenBank EST cDNA Clone Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/gbseqload/index.html">GenBank Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/refseqload/index.html">RefSeq Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/spseqload/index.html">SwissProt/TrEMBL Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/dfciseqload/index.html">DFCI Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/dotsseqload/index.html">DoTS Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/niaseqload/index.html">NIA Sequence Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/pirsfload/index.html">PIRSF Load</A>
 <LI><A HREF="/usrlocalmgi/imsr/imsrload/IMSRindex.html">IMSR Load</A>
 </OL>
 
