@@ -1,3 +1,9 @@
+TAG: qcreports_db-3-5-1-26
+DATE: 11/16/2006
+STAFF: sc
+CHANGES:
+1) qcr.html - updated path to index.html for all loads
+
 TAG: qcreports_db-3-5-1-25
 TAG: qcreports_db-3-5-1-24
 DATE: 11/15/2006
